# settings-components

./: CMakeLists.txt
SettingsComponents/TimeZone/: TimeZone.qml
cmake/modules/: QmlTest.cmake
debian/: bileto_pre_release_hook  changelog  control  copyright  qml-module-lomiri-settings-components.install  qml-module-lomiri-settings-fingerprint.install  qml-module-lomiri-settings-menus.install  qml-module-lomiri-settings-vpn.install  rules
examples/: Fingerprint.qml  MessageComponents.qml  OtherComponents.qml  SettingsComponents.qml  TransferComponents.qml  VpnComponents.qml
plugins/: CMakeLists.txt
plugins/Lomiri/Settings/: CMakeLists.txt
plugins/Lomiri/Settings/Components/: CMakeLists.txt  Calendar.qml  plugin.cpp  plugin.h  qmldir
plugins/Lomiri/Settings/Fingerprint/: CMakeLists.txt  DirectionVisual.qml  Fingerprint.qml  FingerprintVisual.qml  Fingerprints.qml  Setup.qml  StatusLabel.qml  lomirisettingsfingerprint.cpp  lomirisettingsfingerprint.h  plugin.cpp  plugin.h  qmldir
plugins/Lomiri/Settings/Menus/: BaseLayoutMenu.qml  BaseMenu.qml  CMakeLists.txt  ModemInfoItem.qml  PlaybackButton.qml  PlaybackItemMenu.qml  ProgressValueMenu.qml  SectionMenu.qml  SeparatorMenu.qml  SimpleMessageMenu.qml  SnapDecisionMenu.qml  StandardMenu.qml  StyledSlotsLayout.qml  SwitchMenu.qml  TextMessageMenu.qml  TransferMenu.qml  UserSessionMenu.qml  plugin.cpp  plugin.h  pluginglobal.h  qmldir  types.h
plugins/Lomiri/Settings/Menus/Style/: CMakeLists.txt  TouchStyle.qml  qmldir
plugins/Lomiri/Settings/Vpn/: CMakeLists.txt  DialogFile.qml  FileSelector.qml  VpnEditor.qml  VpnList.qml  VpnPreviewDialog.qml  VpnRoutesField.qml  VpnTypeField.qml  lomirisettingsvpn.cpp  lomirisettingsvpn.h  plugin.cpp  plugin.h  qmldir
plugins/Lomiri/Settings/Vpn/Openvpn/: AuthTypeField.qml  CMakeLists.txt  Editor.qml  Preview.qml
plugins/Lomiri/Settings/Vpn/Pptp/: CMakeLists.txt  Editor.qml  Preview.qml
plugins/Lomiri/Settings/Vpn/PreviewDialog/: AllTrafficWithDns.qml  AllTrafficWithoutDns.qml  CMakeLists.txt  InvalidCert.qml  NoCert.qml  NotInstalledWithRoutes.qml  NotInstalledWithoutRoutes.qml  SetUpUnused.qml  SomeTraffic.qml
plugins/Ubuntu/Settings/: CMakeLists.txt
plugins/Ubuntu/Settings/Components/: ActionTextField.qml  Calendar.qml  MessageHeader.qml  UbuntuShapeForItem.qml  qmldir
plugins/Ubuntu/Settings/Fingerprint/: CMakeLists.txt  CircularSegment.qml  DirectionVisual.qml  FingerprintVisual.qml  Fingerprints.qml  SegmentRenderer.qml  Setup.qml
plugins/Ubuntu/Settings/Menus/: AccessPointMenu.qml  BaseMenu.qml  ButtonMenu.qml  CalendarMenu.qml  CheckableMenu.qml  EventMenu.qml  GroupedMessageMenu.qml  MediaPlayerMenu.qml  ProgressBarMenu.qml  RadioMenu.qml  SimpleMessageMenu.qml  SliderMenu.qml  SnapDecisionMenu.qml  StyledSlotsLayout.qml  TextMessageMenu.qml  TimeZoneMenu.qml  TransferMenu.qml
plugins/Ubuntu/Settings/Menus/Style/: PointerStyle.qml
plugins/Ubuntu/Settings/Vpn/: CMakeLists.txt  DialogFile.qml  FileSelector.qml  VpnList.qml  VpnPreviewDialog.qml
plugins/Ubuntu/Settings/Vpn/Openvpn/: AuthTypeField.qml  Editor.qml  Preview.qml
plugins/Ubuntu/Settings/Vpn/Pptp/: Editor.qml  Preview.qml
plugins/Ubuntu/Settings/Vpn/PreviewDialog/: InvalidCert.qml  NotInstalledWithoutRoutes.qml  SetUpUnused.qml
po/: CMakeLists.txt  ar.po  be.po  bn_BD.po  ca.po  cs.po  cy.po  de.po  el.po  es.po  fi.po  fr.po  gd.po  gl.po  hu.po  ia.po  id.po  it.po  lomiri-settings-components.pot  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sc.po  si.po  sk.po  sl.po  tr.po  ubuntu-settings-components.pot  uk.po  update-lsc-pot  zh_CN.po  zh_Hant.po
tests/: CMakeLists.txt
tests/imports/: CMakeLists.txt  check_imports.py
tests/qmltests/: CMakeLists.txt
tests/qmltests/Components/: tst_ActionTextField.qml  tst_Calendar.qml  tst_ServerPropertySynchroniser.qml
tests/qmltests/Fingerprint/: tst_FingerprintNames.qml  tst_FingerprintSetup.qml  tst_FingerprintVisual.qml  tst_Fingerprints.qml
tests/qmltests/Menus/: tst_AccessPointMenu.qml  tst_BaseMenu.qml  tst_ButtonMenu.qml  tst_CalendarMenu.qml  tst_CheckableMenu.qml  tst_EventMenu.qml  tst_GroupedMessageMenu.qml  tst_MediaPlayerMenu.qml  tst_PlaybackItemMenu.qml  tst_ProgressBarMenu.qml  tst_ProgressValueMenu.qml  tst_RadioMenu.qml  tst_SectionMenu.qml  tst_SimpleMessageMenu.qml  tst_SliderMenu.qml  tst_SnapDecisionMenu.qml  tst_StandardMenu.qml  tst_SwitchMenu.qml  tst_TextMessageMenu.qml  tst_TimeZoneMenu.qml  tst_TransferMenu.qml  tst_UserSessionMenu.qml
tests/qmltests/Vpn/: tst_VpnEditor.qml  tst_VpnList.qml  tst_VpnOpenvpnEditor.qml  tst_VpnPptpEditor.qml  tst_VpnPreviewDialog.qml  tst_VpnPreviewDialogCertificateChecks.qml
tests/qmltests/mocks/: CMakeLists.txt
tests/qmltests/mocks/Biometryd/: CMakeLists.txt
tests/qmltests/mocks/GSettings.1.0/: CMakeLists.txt
tests/utils/modules/Lomiri/Settings/Test/: CMakeLists.txt  plugin.cpp
tests/utils/modules/Ubuntu/Test/: UbuntuTestCase.qml
